# cpp20-for-lazy-programmers

./: CMakeLists.txt
ch01/: CMakeLists.txt
ch01/1-hello/: main.cpp
ch02/: CMakeLists.txt
ch02/2-beach/: main.cpp
ch02/6-sound/: main.cpp
