add_executable(1-1-hello 1-hello/main.cpp)
target_link_libraries(1-1-hello SSDL)

add_executable(1-3-drawDot 3-drawDot/main.cpp)
target_link_libraries(1-3-drawDot SSDL)

add_executable(1-4-bugsHead 4-bugsHead/main.cpp)
target_link_libraries(1-4-bugsHead SSDL)

add_executable(1-5-bugsHead 5-bugsHead/main.cpp)
target_link_libraries(1-5-bugsHead SSDL)

add_executable(1-6-colorSquares 6-colorSquares/main.cpp)
target_link_libraries(1-6-colorSquares SSDL)

add_executable(1-7-quotation 7-quotation/main.cpp)
target_link_libraries(1-7-quotation SSDL)

add_executable(1-8-labelSquares 8-labelSquares/main.cpp)
target_link_libraries(1-8-labelSquares SSDL)