add_executable(2-1-beach 1-beach/main.cpp)
target_link_libraries(2-1-beach SSDL)

add_executable(2-2-beach 2-beach/main.cpp)
target_link_libraries(2-2-beach SSDL)

add_executable(2-3-beach 3-beach/main.cpp)
target_link_libraries(2-3-beach SSDL)

add_executable(2-4-flamingo 4-flamingo/main.cpp)
target_link_libraries(2-4-flamingo SSDL)

add_executable(2-5-pupdog 5-pupdog/main.cpp)
target_link_libraries(2-5-pupdog SSDL)

add_executable(2-6-sound 6-sound/main.cpp)
target_link_libraries(2-6-sound SSDL)
